--- a/public/500.html
+++ b/public/500.html
@@ -1,57 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html class="not-found-page">
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+  <title>CenitSaaS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
+  <!-- stylesheets -->
+  <link rel="stylesheet" type="text/css" href="css/compiled/theme.css">
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+  <!-- javascript -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="js/bootstrap/bootstrap.min.js"></script>
+  <script src="js/vendor/sketch.min.js"></script>
+  <script src="js/theme.js"></script>
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->    
 </head>
+<body id="not-found" class="not-found-page">
+  <div class="info">
+    <h1>422</h1>
+    <p>The content type of the request entity is inappropriate.</p>
 
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <p class="go-back">
+      Continue to our <%= link_to 'Home page', root_path %>.
+    </p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <div id="container">
+  </div>
 </body>
 </html>
