fixed error pages

--- a/public/422.html
+++ b/public/422.html
@@ -25,7 +25,7 @@
     <p>We're sorry, but something went wrong</p>
 
     <p class="go-back">
-      Continue to our <%= link_to 'Home page', root_path %>.
+      Continue to our <a href="https://www.cenitsaas.com/"> Home page</a>.
     </p>
   </div>
   <div id="container">
