--- a/public/500.html
+++ b/public/500.html
@@ -25,7 +25,7 @@
     <p>The content type of the request entity is inappropriate.</p>
 
     <p class="go-back">
-      Continue to our <%= link_to 'Home page', root_path %>.
+      Continue to our <a href="https://www.cenitsaas.com/"> Home page</a>.
     </p>
   </div>
   <div id="container">
