changed cenitsaas.com to cenit.io

--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
     <p>The page you're looking for doesn't exist.</p>
 
     <p class="go-back">
-      Continue to our <a href="https://www.cenitsaas.com/"> Home page</a>.
+      Continue to our <a href="https://cenit.io/"> Home page</a>.
     </p>
   </div>
   <div id="container">
