changed cenitsaas by cenit.io

--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
       Continue to our <a href="https://cenit.io/"> Home page</a>.
     </p>
   </div>
-  <div id="container">
+  <div id="container">cenit.io
   </div>
 </body>
 </html>
